Bean to send to backend for new Candidate

--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -26,8 +26,8 @@
 					<div class="col">Country</div>
 					<div class="col">
 						<select class="inpt-tab-std" formControlName="country">
-							<option>NL</option>
-							<option>BE</option>
+							<option>NETHERLANDS</option>
+							<option>BELGIUM</option>
 							<option>UK</option>
 						</select>
 					</div>
