--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item">
            <a  class="dropdown-item" routerLink="/new-candidate">New Candidate</a>
         </li>
+        <li class="nav-item">
+           <a  class="dropdown-item" routerLink="/view-candidates">View Candidates</a>
+        </li>
       </ul>
   </div>
 </nav>
