--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -9,13 +9,13 @@
 					<div class="col-sm-12 bg-tab-hdr">Basic details</div>
 				</div>
 				<div class="row row-section-body">
-					<div class="col">CandidateId</div>
+					<div class="col hdr_label">CandidateId</div>
 					<div class="col"><input type="text" class="inpt-tab-std" formControlName="candidateId"/></div>
-					<div class="col">Firstname</div>
+					<div class="col hdr_label">Firstname</div>
 					<div class="col"><input type="text" class="inpt-tab-std" formControlName="firstname"/></div>
-					<div class="col">Surname</div>
+					<div class="col hdr_label">Surname</div>
 					<div class="col"><input type="text" class="inpt-tab-std" formControlName="surname"/></div>
-					<div class="col">email</div>
+					<div class="col hdr_label">email</div>
 					<div class="col"><input type="text" class="inpt-tab-std" formControlName="email"/></div>
 				</div>	
 
@@ -23,7 +23,7 @@
 					<div class="col-sm-12 bg-tab-hdr">Location details</div>
 				</div>
 				<div class="row row-section-body">
-					<div class="col">Country</div>
+					<div class="col hdr_label">Country</div>
 					<div class="col">
 						<select class="inpt-tab-std" formControlName="country">
 							<option>NETHERLANDS</option>
@@ -31,7 +31,7 @@
 							<option>UK</option>
 						</select>
 					</div>
-					<div class="col">City</div>
+					<div class="col hdr_label">City</div>
 					<div class="col"><input type="text" class="inpt-tab-std" formControlName="city"/></div>
 					<div class="col">&nbsp;</div>
 					<div class="col">&nbsp;</div>
@@ -44,9 +44,9 @@
 				</div>
 				<div>
 					<div class="row row-section-body">
-						<div class="col">Permanent</div>
+						<div class="col hdr_label">Permanent</div>
 						<div class="col"><input type="checkbox" class="inpt-tab-std" formControlName="permanent"/></div>
-						<div class="col">Freelance</div>
+						<div class="col hdr_label">Freelance</div>
 						<div class="col"><input type="checkbox" class="inpt-tab-std" formControlName="freelance"/></div>
 						<div class="col"></div>
 						<div class="col"></div>
@@ -60,7 +60,7 @@
 				</div>
 				<div>
 					<div class="row row-section-body">
-						<div class="col">Dutch</div>
+						<div class="col hdr_label">Dutch</div>
 						<div class="col">
 							<select class="inpt-tab-std" formControlName="dutch">
 								<option>No</option>
@@ -68,7 +68,7 @@
 								<option>Basic</option>
 							</select>
 						</div>
-						<div class="col">English</div>
+						<div class="col hdr_label">English</div>
 						<div class="col">
 							<select class="inpt-tab-std" formControlName="english">
 								<option>No</option>
@@ -76,7 +76,7 @@
 								<option>Basic</option>
 							</select>
 						</div>
-						<div class="col">French</div>
+						<div class="col hdr_label">French</div>
 						<div class="col">
 							<select class="inpt-tab-std" formControlName="french">
 								<option>No</option>
@@ -94,9 +94,9 @@
 				</div>
 				<div>
 					<div class="row row-section-body">
-					<div class="col">Function</div>
+					<div class="col hdr_label">Function</div>
 						<div class="col"><input type="text" class="inpt-tab-std" formControlName="function"/></div>
-						<div class="col">Years Experience</div>
+						<div class="col hdr_label">Years Experience</div>
 						<div class="col"><input type="text" class="inpt-tab-std" formControlName="yearsExperience"/></div>
 						<div class="col"></div>
 						<div class="col"></div>
@@ -110,17 +110,17 @@
 				</div>
 				<div>
 					<div class="row row-section-body">
-						<div class="col">Skills</div>
+						<div class="col hdr_label">Skills</div>
 					</div>
 				</div>
 				
 				<div class="row row-section-body">
-					<div class="col"><input type="text" style="width:80%;" formControlName="skills"/></div>
+					<div class="col hdr_label"><input type="text" style="width:80%;" formControlName="skills"/></div>
 				</div>
 				
 				<div>
 					<div class="row row-section-body">
-						<div class="col"><button (click)="addCandidate()">Save</button></div>
+						<div class="col hdr_label"><button (click)="addCandidate()">Save</button></div>
 					</div>
 				</div>
 
