--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -1,15 +1,12 @@
 <div class=".container m-2">
 
-    <div class="row" style="margin:10px">
-    
-        <div class="col">
-            
-            <div class="row row-section">
-                <div class="col bg-tab-hdr">CandidateId</div>
+    <div class='candidate-table'>
+            <div class="row">
+                <div class="col bg-tab-hdr" >CandidateId</div>
                 <div class="col bg-tab-hdr">Country</div>
                 <div class="col bg-tab-hdr">City</div>
                 <div class="col bg-tab-hdr">Function</div>
-                <div class="col bg-tab-hdr">Perm</div>
+                <div class="col bg-tab-hdr" style>Perm</div>
                 <div class="col bg-tab-hdr">Freelance</div>
                 <div class="col bg-tab-hdr">Years Exp</div>
                 <div class="col bg-tab-hdr">Dutch</div>
@@ -17,7 +14,7 @@
                 <div class="col bg-tab-hdr">French</div>
                 <div class="col bg-tab-hdr">Skills</div>
             </div>
-            <div class="row row-section-body" *ngFor="let candidate of candidates">
+            <div class="row" *ngFor="let candidate of candidates">
                 <div class="col">{{candidate.candidateId}}</div>
                 <div class="col">{{candidate.country}}</div>
                 <div class="col">{{candidate.city}}</div>
@@ -32,5 +29,4 @@
             </div>	
 
     </div>
-    
 </div>
