--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -2,30 +2,30 @@
 
     <div class='candidate-table'>
             <div class="row">
-                <div class="col bg-tab-hdr" >CandidateId</div>
-                <div class="col bg-tab-hdr">Country</div>
-                <div class="col bg-tab-hdr">City</div>
-                <div class="col bg-tab-hdr">Function</div>
-                <div class="col bg-tab-hdr" style>Perm</div>
-                <div class="col bg-tab-hdr">Freelance</div>
-                <div class="col bg-tab-hdr">Years Exp</div>
-                <div class="col bg-tab-hdr">Dutch</div>
-                <div class="col bg-tab-hdr">English</div>
-                <div class="col bg-tab-hdr">French</div>
-                <div class="col bg-tab-hdr">Skills</div>
+                <div class="col-1 bg-tab-hdr medicol" >CandidateId</div>
+                <div class="col-1 bg-tab-hdr microcol">Country</div>
+                <div class="col-1 bg-tab-hdr">City</div>
+                <div class="col-1 bg-tab-hdr">Function</div>
+                <div class="col-1 bg-tab-hdr microcol" style>Perm</div>
+                <div class="col-1 bg-tab-hdr microcol">Freelance</div>
+                <div class="col-1 bg-tab-hdr microcol">Years Exp</div>
+                <div class="col-1 bg-tab-hdr medicol">Dutch</div>
+                <div class="col-1 bg-tab-hdr medicol">English</div>
+                <div class="col-1 bg-tab-hdr medicol">French</div>
+                <div class="col-2 bg-tab-hdr">Skills</div>
             </div>
             <div class="row" *ngFor="let candidate of candidates">
-                <div class="col">{{candidate.candidateId}}</div>
-                <div class="col">{{candidate.country}}</div>
-                <div class="col">{{candidate.city}}</div>
-                <div class="col">{{candidate.function}}</div>
-                <div class="col">{{candidate.permanent}}</div>
-                <div class="col">{{candidate.freelance}}</div>
-                <div class="col">{{candidate.yearsExperience}}</div>
-                <div class="col">{{candidate.getDutch()}}</div>
-                <div class="col">{{candidate.getEnglish()}}</div>
-                <div class="col">{{candidate.getFrench()}}</div>
-                <div class="col">{{candidate.getSkills()}}</div>
+                <div class="col-1 medicol">{{candidate.candidateId}}</div>
+                <div class="col-1 microcol">{{candidate.country}}</div>
+                <div class="col-1">{{candidate.city}}</div>
+                <div class="col-1">{{candidate.function}}</div>
+                <div class="col-1 microcol">{{candidate.permanent}}</div>
+                <div class="col-1 microcol">{{candidate.freelance}}</div>
+                <div class="col-1 microcol">{{candidate.yearsExperience}}</div>
+                <div class="col-1 medicol">{{candidate.getDutch()}}</div>
+                <div class="col-1 medicol">{{candidate.getEnglish()}}</div>
+                <div class="col-1 medicol">{{candidate.getFrench()}}</div>
+                <div class="col-2">{{candidate.getSkills()}}</div>
             </div>	
 
     </div>
