styling new candidate

--- a/recruit-gui/src/app/login-user/login-user.component.html
+++ b/recruit-gui/src/app/login-user/login-user.component.html
@@ -2,35 +2,36 @@
 
 	<div class=".container m-2">
 
-		<div class="row" style="margin:10px">
+        <div class="login-table">
 
-            <div class="col">
-                Username
-            </div>
-            <div class="col">
-                <div class="col"><input type="text" class="inpt-tab-std" formControlName="username"/></div>
-            </div>
+            <div class="row">
 
+                <div class="col leftcol">
+                    Username
+                </div>
+                <div class="col rightcol">
+                    <input type="text" formControlName="username"/>
+                </div>
 
-        </div>
-
-        <div class="row" style="margin:10px">
-
-            <div class="col">
-                Password
-            </div>
-            <div class="col">
-                <div class="col"><input type="text" class="inpt-tab-std" formControlName="password"/></div>
             </div>
 
-            
-        </div>
+            <div class="row">
 
-        <div>
-		    <div class="row row-section-body">
-			    <div class="col hdr_label"><button (click)="login()">Save</button></div>
-					
-			</div>
+                <div class="col leftcol">
+                    Password
+                </div>
+                <div class="col rightcol">
+                    <input type="password" formControlName="password"/>
+                </div>
+
+            </div>
+
+            <div>
+                <div class="row">
+                    <div class="col leftcol">&nbsp;</div>
+                    <div class="col right"><button class="loginbutton" (click)="login()">Login</button></div>
+                </div>
+            </div>
         </div>
     </div>
 </form>
