--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -1,148 +1,132 @@
 <form [formGroup]="formBean">
 
-	<div class=".container m-2">
+	<div class="wholepage">
+		<div class="centerdiv" >
+			
+			<div class="row wholepagerow">
+				<div class="col halpagecol">
 
-		<div class="row" style="margin:10px">
-			<div class="col">
-				
-				<div class="row row-section">
-					<div class="col-sm-12 bg-tab-hdr">Basic details</div>
-				</div>
-				<div class="row row-section-body">
-					<div class="col hdr_label">CandidateId</div>
-					<div class="col"><input type="text" class="inpt-tab-std" formControlName="candidateId"/></div>
-					<div class="col hdr_label">Firstname</div>
-					<div class="col"><input type="text" class="inpt-tab-std" formControlName="firstname"/></div>
-					<div class="col hdr_label">Surname</div>
-					<div class="col"><input type="text" class="inpt-tab-std" formControlName="surname"/></div>
-					<div class="col hdr_label">email</div>
-					<div class="col"><input type="text" class="inpt-tab-std" formControlName="email"/></div>
-				</div>	
-
-				<div class="row row-section">
-					<div class="col-sm-12 bg-tab-hdr">Location details</div>
-				</div>
-				<div class="row row-section-body">
-					<div class="col hdr_label">Country</div>
-					<div class="col">
-						<select class="inpt-tab-std" formControlName="country">
-							<option>NETHERLANDS</option>
-							<option>BELGIUM</option>
-							<option>UK</option>
-						</select>
+					<div class="row rowadduser">
+						<div class="col bg-tab-hdr">User</div>
 					</div>
-					<div class="col hdr_label">City</div>
-					<div class="col"><input type="text" class="inpt-tab-std" formControlName="city"/></div>
-					<div class="col">&nbsp;</div>
-					<div class="col">&nbsp;</div>
-					<div class="col">&nbsp;</div>
-					<div class="col">&nbsp;</div>
+					
+					<div class="row rowadduser">
+						<div class="col hdr_label">Candidate Id</div>
+						<div class="col"><input type="text" class="inpt-tab-std" formControlName="candidateId"/></div>
+					</div>
+
+					<div class="row rowadduser">
+						<div class="col hdr_label">First name</div>
+						<div class="col"><input type="text" class="inpt-tab-std" formControlName="firstname"/></div>
+					</div>
+
+					<div class="row rowadduser">
+						<div class="col hdr_label">Surname</div>
+						<div class="col"><input type="text" class="inpt-tab-std" formControlName="surname"/></div>
+					</div>
+
+					<div class="row rowadduser">
+						<div class="col hdr_label">email</div>
+						<div class="col"><input type="text" class="inpt-tab-std" formControlName="email"/></div>
+					</div>
+
+					<div class="row rowadduser">
+						<div class="col hdr_label">Country</div>
+						<div class="col">
+							<select class="inpt-tab-std" formControlName="country">
+								<option>NETHERLANDS</option>
+								<option>BELGIUM</option>
+								<option>UK</option>
+							</select>
+						</div>
+					</div>
+
+					<div class="row rowadduser">
+						<div class="col hdr_label">City</div>
+						<div class="col"><input type="text" class="inpt-tab-std" formControlName="city"/></div>
+					</div>
+
+					<div class="row rowadduser">
+						<div class="col hdr_label">Dutch</div>
+							<div class="col">
+								<select class="inpt-tab-std" formControlName="dutch">
+									<option>No</option>
+									<option>Yes</option>
+									<option>Basic</option>
+								</select>
+							</div>
+					</div>
+
+					<div class="row rowadduser">
+
+						<div class="col hdr_label">English</div>
+							<div class="col">
+								<select class="inpt-tab-std" formControlName="english">
+									<option>No</option>
+									<option>Yes</option>
+									<option>Basic</option>
+								</select>
+							</div>
+
+					</div>
+
+					<div class="row rowadduser">
+
+						<div class="col hdr_label">French</div>
+							<div class="col">
+								<select class="inpt-tab-std" formControlName="french">
+									<option>No</option>
+									<option>Yes</option>
+									<option>Basic</option>
+								</select>
+							</div>
+
+					</div>
+
 				</div>
 
-				<div class="row row-section">
-					<div class="col-sm-12 bg-tab-hdr">Role type</div>
-				</div>
-				<div>
-					<div class="row row-section-body">
+				<div class="col halpagecol">
+
+					<div class="row rowadduser">
+						<div class="col bg-tab-hdr">Function</div>
+					</div>
+
+					<div class="row rowadduser">
 						<div class="col hdr_label">Permanent</div>
 						<div class="col"><input type="checkbox" class="inpt-tab-std" formControlName="permanent"/></div>
+					</div>
+
+					<div class="row rowadduser">
 						<div class="col hdr_label">Freelance</div>
 						<div class="col"><input type="checkbox" class="inpt-tab-std" formControlName="freelance"/></div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
 					</div>
-				</div>	
-				
-								<div class="row row-section">
-					<div class="col-sm-12 bg-tab-hdr">Language details</div>
-				</div>
-				<div>
-					<div class="row row-section-body">
-						<div class="col hdr_label">Dutch</div>
-						<div class="col">
-							<select class="inpt-tab-std" formControlName="dutch">
-								<option>No</option>
-								<option>Yes</option>
-								<option>Basic</option>
-							</select>
-						</div>
-						<div class="col hdr_label">English</div>
-						<div class="col">
-							<select class="inpt-tab-std" formControlName="english">
-								<option>No</option>
-								<option>Yes</option>
-								<option>Basic</option>
-							</select>
-						</div>
-						<div class="col hdr_label">French</div>
-						<div class="col">
-							<select class="inpt-tab-std" formControlName="french">
-								<option>No</option>
-								<option>Yes</option>
-								<option>Basic</option>
-							</select>
-						</div>
-						<div class="col"></div>
-						<div class="col"></div>
-					</div>
-				</div>
 
-				<div class="row row-section">
-					<div class="col-sm-12 bg-tab-hdr">Function details</div>
-				</div>
-				<div>
-					<div class="row row-section-body">
-					<div class="col hdr_label">Function</div>
+					<div class="row rowadduser">
+						<div class="col hdr_label">Function</div>
 						<div class="col"><input type="text" class="inpt-tab-std" formControlName="function"/></div>
+					</div>
+
+					<div class="row rowadduser">
 						<div class="col hdr_label">Years Experience</div>
 						<div class="col"><input type="text" class="inpt-tab-std" formControlName="yearsExperience"/></div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
 					</div>
-				</div>
 
-				<div class="row row-section">
-					<div class="col-sm-12 bg-tab-hdr">Skills</div>
-				</div>
-				<div>
-					<div class="row row-section-body">
-						<div class="col hdr_label">Skills</div>
+					<div class="row rowadduser">
+						<div class="col-sm-2 hdr_label">Skills</div>
 					</div>
-				</div>
-				
-				<div class="row row-section-body">
-					<div class="col hdr_label"><input type="text" style="width:80%;" formControlName="skills"/></div>
-				</div>
-				
-				<div>
-					<div class="row row-section-body">
-						<div class="col hdr_label"><button (click)="addCandidate()">Save</button></div>
+
+					<div class="row rowadduser">
+						<div class="col-sm-2"><textarea  class="skills" formControlName="skills"></textarea></div>
 					</div>
+
 				</div>
 
 			</div>
+			<div class="row" >
+					<div class="col"></div>
+					<div class="col hdr_label" style="text-align:right; margin-right:30px;"><button (click)="addCandidate()">Save</button></div>
+				</div>
 		</div>
-		
 	</div>
 
 </form>
-
-
-
-
-
-				
-
-				
-				
-				
-
-
-				
-
-
-
