--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Arenella ICT Candidate Recruitment</h1>
 </nav>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg xx">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-secondary">
         <li class="nav-item">
@@ -19,3 +19,7 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+<nav class="footer">
+ <p>Email: kparkings@gmail.com</p>
+</nav>
