--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -1,14 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 .bg-arenella-primary {
-	background: #2b2b2b;
+	background: #181414;
+}
+
+.xx{
+	background:#303030;
+	height:50px;
+	color:red;
+}
+
+
+body{
+	background: #F5F5F5;
 }
 
 .nav-primary{
-	color:#ffffff;
+	color:#6A5ACD;
+}
+
+
+.dropdown-item:hover{
+	background: #D3D3D3;
 }
 
 .nav-secondary{
-	color:#000000;
+	color:#F5F5F5;
 }
 
 .centerdiv{
@@ -46,6 +62,10 @@
 	width:150px;
 }
 
+.dropdown-item{
+	color:#ffffff;
+}
+
 .skills{
 	width:350px;
 	height:130px;
@@ -62,3 +82,4 @@
 	margin-right:10px;
 	max-width: 400px;
 }
+
