auth in backend and prettier UI

--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -53,7 +53,7 @@
                     <p>For freelance ICT candidates we send you an invoice each months for the  hours worked.</p>
                     <p>For permanent ICT candidates we send you a single invoice when you place the candidade.</p>
                     <h2>How to get started</h2>
-                    <p>Email: kparkings@gmail.com to receive a free use account.</p>
+                    <p>Email: kparkings@gmail.com to receive a free user account.</p>
                 </div>
             </div>
         </div>
