Basic XLS download functionality

--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -2,7 +2,7 @@
 
     <div class='candidate-table'>
             <div class="row">
-                <div class="col-1 bg-tab-hdr medicol" >CandidateId</div>
+                <div class="col-1 bg-tab-hdr medicol" (click)="open(mymodal)">CandidateId</div>
                 <div class="col-1 bg-tab-hdr microcol">Country</div>
                 <div class="col-1 bg-tab-hdr">City</div>
                 <div class="col-1 bg-tab-hdr">Function</div>
@@ -29,4 +29,21 @@
             </div>	
 
     </div>
+
 </div>
+
+
+<ng-template #mymodal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Bootstrap Modal</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    This is example from ItSolutionStuff.com
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Ok</button>
+  </div>
+</ng-template>
