xls candidate view download

--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -2,6 +2,12 @@
 
     <div class='candidate-table'>
             <div class="row">
+              <div class="col-sm-11"></div>
+              <div class="col-sm-1">
+                <a class="btn btn-secondary btnRight" href="http://127.0.0.1:8080/candidate/download" download>Download</a>
+              </div> 
+            </div>
+            <div class="row">
                 <div class="col-1 bg-tab-hdr medicol" (click)="open(mymodal)">CandidateId</div>
                 <div class="col-1 bg-tab-hdr microcol">Country</div>
                 <div class="col-1 bg-tab-hdr">City</div>
