--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+
 .bg-arenella-primary {
 	background: #181414;
 }
@@ -83,3 +85,6 @@ body{
 	max-width: 400px;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
