--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -93,7 +93,7 @@
 
 					<div class="row rowadduser">
 						<div class="col hdr_label">Permanent</div>
-						<div class="col"><input type="checkbox" class="inpt-tab-std" formControlName="permanent"/></div>
+						<div class="col"><input type="checkbox" class="inpt-tab-std" formControlName="perm"/></div>
 					</div>
 
 					<div class="row rowadduser">
